# herdr-ghq

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  herdr-plugin.toml
.github/workflows/: ci.yml  release.yml
examples/: config.toml  keybindings.toml
src/: action.rs  changelog.rs  data.rs  git.rs  graphics.rs  history.rs  hunk.rs  keymap.rs  main.rs  markdown.rs  preview.rs  runner.rs  settings.rs  source.rs  startup.rs  state.rs  tui.rs  ui.rs  update.rs
tests/: bootstrap_spec.sh  manifest_spec.sh  update_guard_spec.sh
